--- a/css/network.css
+++ b/css/network.css
@@ -7,3 +7,16 @@
   stroke: #fff;
   stroke-width: 1.5px;
 }
+
+div.tooltip {	
+  position: absolute;			
+  text-align: center;			
+  padding: 10px;				
+  font: 12px sans-serif;		
+  background-color: rgba(0, 0, 0, 0.7);
+  border: 0px;		
+  border-radius: 8px;			
+  pointer-events: none;	
+  color:white;
+  font-size: 14px;
+}
