--- a/layout.css
+++ b/layout.css
@@ -105,7 +105,7 @@ body {
 }
 
 .button-item:hover {
-  background-color: rgba(255, 255, 255, .1);
+  background-color: rgba(255, 255, 255, .1)
 }
 
 h1 {
