--- a/intro.css
+++ b/intro.css
@@ -1,11 +1,6 @@
 
 body {
-  margin: 0px;
-  color: #e1e1e1;
-  font-family: 'Raleway', sans-serif;
-  background: linear-gradient(-45deg, #381212, #471717, rgb(29, 2, 102),#0b0d72);
-	background-size: 400% 400%;
-	animation: Gradient 13s ease infinite;
+  margin: 0;
 }
 
 #intro {
@@ -68,7 +63,13 @@ button:focus {
 }
 
 #intro_container {
-  height: 100%;
+  height: 100vh;
+  margin: 0px;
+  color: #e1e1e1;
+  font-family: 'Raleway', sans-serif;
+  background: linear-gradient(-45deg, #381212, #471717, rgb(29, 2, 102),#0b0d72);
+	background-size: 400% 400%;
+	animation: Gradient 13s ease infinite;
 }
 
 i {
