--- a/css/layout.css
+++ b/css/layout.css
@@ -5,7 +5,11 @@ body {
 }
 
 #narration {
-  width: 100vw;
+  width: 30%; /* Matches width of Left */
+}
+
+.graph-scroll-active {
+  border: 3px solid gold;
 }
 
 .statement {
@@ -14,7 +18,6 @@ body {
   justify-content: center;
 
   height: 100%;
-  width: 30%; /* Matches width of Left */
   left: 0px;
 
   box-sizing: border-box;
@@ -27,10 +30,11 @@ body {
 
 #year_container {
   height: 100vh;
-  width: 100vw;
+  width: 70%;
   position: sticky;
   top: 0px;
   right: 0px;
+  float: right;
 }
 
 #top {
@@ -40,7 +44,7 @@ body {
 #right {
   position: relative;
   height: 100%;
-  width: calc(20% - 20px);
+  width: calc(30% - 20px);
   float: left;
   background-color: #381212;
   box-shadow: 0px -2px 15px #111;
@@ -50,28 +54,21 @@ body {
 
 #middle {
   height: calc(100% - 80px);
-  width: calc(50% - 80px);
+  width: calc(70% - 80px);
   float: left;
   background-color: #230c0c;
   padding: 40px;
 }
 
-#left {
-  height: 100%;
-  width: 30%;
-  float: left;
-  box-shadow: 0px -2px 15px #111;
-  position: relative;
-}
-
 #footer {
   height: 30px;
-  position: absolute;
-  bottom: 0px;
+  position: sticky;
+  top: 100vh;
+  margin-left: -30vw;
   background-color: #471717;
-  width: 100%;
+  width: 100vw;
   display: flex;
-  justify-content: center; 
+  justify-content: center;
   box-shadow: -2px 0px 10px #111;
 }
 
