--- a/css/layout.css
+++ b/css/layout.css
@@ -53,11 +53,10 @@ body {
 }
 
 #middle {
-  height: calc(100% - 80px);
-  width: calc(70% - 80px);
+  height: 100%;
+  width: 70%;
   float: left;
   background-color: #230c0c;
-  padding: 40px;
 }
 
 #footer {
@@ -79,11 +78,10 @@ body {
   font-size: 5vw;
   border-right: 3px solid #802e2e;
   border-bottom: 3px solid #802e2e;
-  width: fit-content; 
-  padding: 0px 15px;
-  padding-top: 15px;
-  float: top;
-  vertical-align: top;
+  width: fit-content;
+  padding: 15 15 0 15;
+  margin-left: -30vw;
+  float: left;
 }
 
 #narrative {
@@ -136,7 +134,7 @@ h1 {
   font-family: 'Open Sans', sans-serif;
   text-transform: uppercase;
   text-align: center;
-  margin: 0;
+  margin: 15 0 0 0;
 }
 
 #keywords {
