--- a/css/conclusion.css
+++ b/css/conclusion.css
@@ -19,12 +19,13 @@
   margin: 15px;
   background-color: rgba(255, 255, 255, 0.8);
   width: calc(25% - 30px);
-  height: 150px;
+  height: calc(25% - 30px);
   font-size: 30px;
   text-align: center;
   position: relative;
   border-radius: 8px;
   box-shadow: 8px 8px 15px #111;
+  cursor: pointer;
 }
 
 #summary-text{
