Keyword group is now a div on top of the main vis.

--- a/css/tSNE.css
+++ b/css/tSNE.css
@@ -16,6 +16,12 @@ div.tooltip {
   font-size: 14px;
 }
 
+#keywordGroup {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+
 .keywordForGroup {
   font-size: 18pt;
   fill: #fff;
