--- a/css/layout.css
+++ b/css/layout.css
@@ -38,7 +38,7 @@ body {
 }
 
 #top {
-  height: calc(100% - 30px);
+  height: calc(100% - 15px);
 }
 
 #right {
@@ -61,7 +61,7 @@ body {
 }
 
 #footer {
-  height: 30px;
+  height: 15px;
   position: sticky;
   top: 100vh;
   margin-left: -30vw;
@@ -97,6 +97,11 @@ body {
   width: 100%;
   height: 100%;
   border-left: 2px solid #7a2626;
+  background-color: #471717;
+}
+
+.progress-made {
+  background-color: yellow;
 }
 
 #footer > div:first-child
@@ -138,7 +143,7 @@ h1 {
   margin: 15 0 0 0;
 }
 
-#keywords {
+#keywordSummary {
   font-size: 1.3vw;
   overflow: hidden;
 }
