--- a/css/layout.css
+++ b/css/layout.css
@@ -97,11 +97,14 @@ body {
   width: 100%;
   height: 100%;
   border-left: 2px solid #7a2626;
-  background-color: #471717;
+  background: linear-gradient(to right, yellow 50%, #471717 50%);
+  background-size: 200% 100%;
+  background-position:right bottom;
 }
 
 .progress-made {
-  background-color: yellow;
+  background-position: left bottom;
+  transition:all 1s ease;
 }
 
 #footer > div:first-child
