--- a/css/conclusion.css
+++ b/css/conclusion.css
@@ -30,6 +30,19 @@
 
 #summary-text{
   padding: 0px 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#closingblurb {
+  width: 50%;
+  padding: 25px 0;
+}
+
+#closingblurb a {
+  color: gold;
+  text-decoration: none;
 }
 
 .year{
@@ -38,5 +51,5 @@
   color: #b13636;
   position: absolute;
   bottom: 0px;
-  left: 20%;
+  width: 100%;
 }
