--- a/css/layout.css
+++ b/css/layout.css
@@ -99,7 +99,7 @@ body {
   width: 100%;
   height: 100%;
   border-left: 2px solid #7a2626;
-  background: linear-gradient(to right, yellow 50%, #471717 50%);
+  background: linear-gradient(to right, gold 50%, #471717 50%);
   background-size: 200% 100%;
   background-position:right bottom;
 }
